--- a/style.css
+++ b/style.css
@@ -101,3 +101,34 @@ body
 	border-radius: 5px;
 	margin-left: 2%;
 }
+
+#landing-link
+{
+	text-align: center;
+	position: absolute;
+	top: 80%;
+	left: 50%;
+	padding: 20px;
+	transform: translate(-50%, -50%);
+	color: black;
+	background-color: #f1f1f1;
+	border-radius: 3px;
+	text-decoration: none;
+	font-size: 20px;
+}
+
+#landing-bg
+{
+  background-image: url("cs.jpg");
+
+  /* Set a specific height */
+  height: 100%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+  filter: blur(0px);
+}
