--- a/style.css
+++ b/style.css
@@ -117,6 +117,29 @@ body
 	font-size: 20px;
 }
 
+#landing-link:hover
+{
+	background-color: #ebebeb;
+	transition: 0.1s;
+}
+
+#landing-text
+{
+	text-align: center;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	color: white;
+	transform: translate(-50%, -50%);
+	font-size: 50px;
+	border-style: solid;
+	border-width: 5px;
+	width: 60%;
+	padding: 10px;
+	border-radius: 5px;
+	background-color: rgba(1, 1, 1, 0.8);
+}
+
 #landing-bg
 {
   background-image: url("cs.jpg");
@@ -130,5 +153,5 @@ body
   background-size: cover;
   position: relative;
 
-  filter: blur(0px);
+  filter: blur(2px);
 }
